--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@babel/runtime": "^7.17.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -8,6 +9,7 @@
     "start": "npm i && npx webpack-dev-server --mode development --devtool source-map"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.15.8",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
