--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "npm i && npx webpack-dev-server --mode development --devtool source-map"
+    "start": "npm i && npx webpack-dev-server --mode development --devtool source-map",
+    "lint": "npx eslint --fix ./src"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
@@ -15,6 +16,13 @@
     "babel-preset-react-app": "^10.0.0",
     "css-loader": "^6.3.0",
     "es6-promise-plugin": "^4.2.2",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0",
