--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "2.5.1",
     "style-loader": "^3.3.0",
     "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0",
