--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
     "css-loader": "^6.3.0",
+    "error-overlay-webpack-plugin": "^1.1.0",
     "es6-promise-plugin": "^4.2.2",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -24,6 +25,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "prettier": "2.5.1",
     "style-loader": "^3.3.0",
     "webpack": "^5.56.0",
