--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "file-loader": "^6.2.0",
     "prettier": "2.5.1",
     "style-loader": "^3.3.0",
     "webpack": "^5.56.0",
