--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "npx eslint --fix ./src"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.15.8",
-    "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
     "css-loader": "^6.3.0",
