--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@babel/cli": "^7.17.6",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.2",
-    "babel-preset-react-app": "^10.0.0",
     "css-loader": "^6.3.0",
     "es6-promise-plugin": "^4.2.2",
     "eslint": "^8.10.0",
