--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "npm i && npx webpack-dev-server --mode development --devtool source-map",
     "compile": "npm i && npx webpack --mode production",
-    "lint": "npx eslint --fix ./src"
+    "lint": "npx eslint --fix ./src",
+    "npm:publish": "rm -rf dist && mkdir dist && babel src/components -d dist --copy-files"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
