--- a/package.json
+++ b/package.json
@@ -32,5 +32,19 @@
     "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
-  }
+  },
+  "name": "evroca-core",
+  "version": "1.0.0",
+  "description": "Test Description",
+  "main": "./dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ecarlson2020/evroca-core.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ecarlson2020/evroca-core/issues"
+  },
+  "homepage": "https://github.com/ecarlson2020/evroca-core#readme"
 }
