--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
     "@babel/runtime": "^7.17.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -9,7 +13,7 @@
     "start": "npm i && npx webpack-dev-server --mode development --devtool source-map",
     "compile": "npm i && npx webpack --mode production",
     "lint": "npx eslint --fix ./src",
-    "npm:compile": "rm -rf dist && mkdir dist && babel src/components -d dist --copy-files",
+    "npm:compile": "rm -rf dist && mkdir dist && babel src/exported -d dist --copy-files",
     "npm:publish": "npm run npm:compile; git add .; gitcommit compile; git push; npm version patch; git push; npm publish"
   },
   "devDependencies": {
