--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm i && npx webpack-dev-server --mode development --devtool source-map",
     "compile": "npm i && npx webpack --mode production",
     "lint": "npx eslint --fix ./src",
-    "npm:compile": "rm -rf dist && mkdir dist && babel src/exported -d dist --copy-files",
+    "npm:compile": "npm i;rm -rf dist && mkdir dist && babel src/exported -d dist --copy-files",
     "npm:publish": "npm run npm:compile; git add .; gitcommit compile; git push; npm version patch; git push; npm publish"
   },
   "devDependencies": {
