--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "prettier": "2.5.1",
     "style-loader": "^3.3.0",
+    "unimported": "^1.22.0",
     "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
