--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "dependencies": {
     "@babel/runtime": "^7.17.0",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
-    "start": "npm i && npx webpack-dev-server --mode development --devtool source-map",
-    "compile": "npm i && npx webpack --mode production",
+    "start": "yarn && npx webpack-dev-server --mode development --devtool source-map",
+    "compile": "yarn && npx webpack --mode production",
     "lint": "npx eslint --fix ./src",
-    "npm:compile": "npm i;rm -rf dist && mkdir dist && babel src/exported -d dist --copy-files",
+    "npm:compile": "yarn;rm -rf dist && mkdir dist && babel src/exported -d dist --copy-files",
     "npm:publish": "npm run npm:compile; git add .; gitcommit compile; git push; npm version patch; git push; npm publish"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.21.0",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^9.1.2",
     "css-loader": "^6.3.0",
     "es6-promise-plugin": "^4.2.2",
     "eslint": "^8.10.0",
@@ -28,12 +29,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "prettier": "2.5.1",
+    "eslint-webpack-plugin": "^4.0.0",
+    "prettier": "2.8.4",
     "style-loader": "^3.3.0",
     "unimported": "^1.22.0",
     "webpack": "^5.56.0",
-    "webpack-cli": "^4.8.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.3.0"
   },
   "name": "@evroca/core",
