--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
   "dependencies": {
-    "@babel/runtime": "^7.17.0",
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/plugin-transform-runtime": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/runtime": "^7.22.10",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.1",
+    "eslint-webpack-plugin": "^4.0.1",
+    "prettier": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.3",
+    "unimported": "^1.29.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "start": "yarn && npx webpack-dev-server --mode development --devtool source-map",
-    "compile": "yarn && npx webpack --mode production",
+    "start": "npm i && npx webpack-dev-server --mode development --devtool source-map",
+    "compile": "npm i && npx webpack --mode production",
     "lint": "npx eslint --fix ./src",
-    "npm:init": "npm adduser",
-    "npm:compile": "yarn;rm -rf dist && mkdir dist && babel src/exported -d dist --copy-files",
-    "npm:publish": "npm run npm:compile; git add .; gitcommit compile; git push; npm version patch; git push; npm publish"
+    "npm:compile": "npm i;rm -rf dist && mkdir dist && babel src/exported -d dist --copy-files",
+    "npm:publish": "npm login;npm run npm:compile; git add .; gitcommit compile; git push; npm version patch; git push; npm publish"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.21.0",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^9.1.2",
-    "css-loader": "^6.3.0",
     "es6-promise-plugin": "^4.2.2",
-    "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.2",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-webpack-plugin": "^4.0.0",
-    "prettier": "2.8.4",
-    "style-loader": "^3.3.0",
-    "unimported": "^1.22.0",
-    "webpack": "^5.56.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0"
   },
   "name": "@evroca/core",
   "version": "1.1.33",
